# frida-ire

./: .gitignore  .gitmodules  .hgignore
cloud-spy/: cloud-spy-test.html  home.html
cloud-spy/chrome/: manifest.json  popup.html  test.html
cloud-spy/chrome/plugin-mac.plugin/Contents/: Info.plist
cloudspy/: app.yaml  home.html  main.py
cloudspy/chrome/: manifest.json  popup.html
kahlo/: kahlo.rules  kahlo.sln  kahlo.vcproj  kahlo.vcxproj  kahlo.vcxproj.filters
kahlo/ext/: sdkurl.txt
kahlo/src/: kahlo.vala  winmain.c
org.boblycat.frida.core/: .classpath  .project
org.boblycat.frida.core/src/java/org/boblycat/frida/core/: BasicBlock.java  BinaryCodeChunk.java  BitUtils.java  BitUtils.scala  CodeChunk.java  FridaException.java  NotImplementedException.java  PrintUtils.java
org.boblycat.frida.core/src/java/org/boblycat/frida/core/basicblock/: BasicBlockAnalyzer.java
org.boblycat.frida.core/src/java/org/boblycat/frida/core/disassembler/: Disassembler.java  DisassemblerFactory.java  Instr.java  JumpInstr.java
org.boblycat.frida.core/src/org/boblycat/frida/core/: BitUtils.scala  FridaException.scala  Main.java  PrintUtils.scala
org.boblycat.frida.core/src/scala/org/boblycat/frida/core/: BinaryCodeChunk.scala  ChunkId.scala  ChunkStore.scala  FileUtils.scala  FridaConfig.scala  FridaCore.scala  NamedChunkId.scala
org.boblycat.frida.plugin.codematcher/: .classpath  .project
org.boblycat.frida.plugin.codematcher/src/scala/org/boblycat/frida/plugin/codematcher/: CodeMatcher.scala
org.boblycat.frida.plugin.codematcher/src/test/org/boblycat/frida/plugin/codematcher/: Main.scala
org.boblycat.frida.plugin.disassembler.arm/: .classpath  .project
org.boblycat.frida.plugin.disassembler.arm/src/org/boblycat/frida/plugin/disassembler/arm/: ARMDisasm.scala
org.boblycat.frida.plugin.disassembler.arm/src/scala/org/boblycat/frida/plugin/disassembler/arm/: ARMDisasm.scala
org.boblycat.frida.plugin.disassembler.mips/: .classpath  .project
org.boblycat.frida.plugin.disassembler.mips/src/org/boblycat/frida/plugin/disassembler/: Disassembler.scala
org.boblycat.frida.plugin.disassembler.mips/src/org/boblycat/frida/plugin/disassembler/mips/: MIPSDisasm.scala
org.boblycat.frida.plugin.disassembler.mips/src/scala/org/boblycat/frida/: Main.scala
org.boblycat.frida.plugin.disassembler.mips/src/scala/org/boblycat/frida/plugin/disassembler/: DisassemblerFactory.scala  Instr.scala
org.boblycat.frida.plugin.disassembler.mips/src/scala/org/boblycat/frida/plugin/disassembler/mips/: MIPSDisasm.scala
org.boblycat.frida.plugin.disassembler.mips/src/test/org/boblycat/frida/plugin/disassembler/mips/: TestBasicBlockAnalyzer.scala  TestMIPSDisasm.scala
org.boblycat.frida.plugin.loader.elf/src/org/boblycat/frida/plugin/loader/elf/: ELFFile.java  ELFHeader.java  ELFStreamReader.java  ProgramHeader.java  TestELFHeader.java
org.boblycat.frida.plugin.loader.elf/src/org/boblycat/frida/plugin/loader/elf/types/: E32Addr.java  E32Half.java  E32Off.java  E32Word.java  UChar.java
org.boblycat.frida.plugins.elfloader/src/org/boblycat/frida/plugins/elfloader/: ELFHeader.java  ELFStreamReader.java  TestELFHeader.java
org.boblycat.frida.plugins.elfloader/src/org/boblycat/frida/plugins/elfloader/types/: E32Addr.java  E32Half.java  E32Off.java  E32Word.java  UChar.java
org.boblycat.frida.ui/: .classpath  .project  README
org.boblycat.frida.ui/lib/: required.txt
org.boblycat.frida.ui/src/java/org/boblycat/frida/ui/: FridaApp.java  FridaApp.scala  InvalidIndentationException.java  OffsideRuleLexer.java  document.wtkx  frida.wtkx
zed/bindings/: Makefile.am
zed/bindings/cloud-spy/: Makefile.am  cloud-spy-api-glue.c  cloud-spy-api.vala  cloud-spy-byte-array.cpp  cloud-spy-object-priv.h  cloud-spy-object.cpp  cloud-spy-object.h  cloud-spy-object.vapi  cloud-spy-plugin.cpp  cloud-spy-plugin.h  cloud-spy-promise.cpp  cloud-spy-promise.h  cloud-spy-root.vala  cloud-spy-variant.cpp  cloud-spy-variant.h  cloud-spy.def  cloud-spy.rc  cloud-spy.resources  cloud-spy.vcxproj  cloud-spy.vcxproj.filters  resource.h
zed/bindings/cloudspy/: cloudspy.aps  cloudspy.c  cloudspy.cpp  cloudspy.def  cloudspy.rc  cloudspy.vcxproj  cloudspy.vcxproj.filters  cloudspyobject.cpp  cloudspyobject.h  cloudspyobject.vapi  cloudspyplugin.cpp
zed/bindings/frida-clr/: Application.cpp  Application.hpp  Marshal.cpp  Marshal.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  frida-clr.vcxproj  frida-clr.vcxproj.filters
zed/bindings/pyfrida/: Makefile.am  example.py  frida.defs  frida.py  pyfrida.c  pyfrida.resources  pyfrida.vcxproj  pyfrida.vcxproj.filters  session-manager.vala
zed/ext/libgum/: waf
zed/vapi/: clutter-1.0.vapi
